Doplněny editory pro LaTeX

--- a/Lecture1/Lecture1.tex
+++ b/Lecture1/Lecture1.tex
@@ -293,6 +293,18 @@ with no extra parameters or packages     included.
 \subsection{Editory pro \hologo{LaTeX}}
 \begin{frame}
 	\frametitle{Editory pro \hologo{LaTeX}}
+	\ParagraphCaption{Integrovaná prostředí (IDE)}
+	\begin{description}
+		\item[Texmaker] -- \url{http://www.xm1math.net/texmaker}
+		\item[TeXstudio] -- \url{http://texstudio.sourceforge.net}
+		\item[TeXnicCenter] -- \url{https://www.texniccenter.org/}\par{}(v současné době již zastaralé)
+	\end{description}
+	\ParagraphCaption{Programátorské editory}\par
+	Obecně lze použít jakýkoliv programátorský editor - záleží­ na uživatelově vkusu a zvyku\ldots
+	\begin{description}
+		\item[Sublime Text] -- \url{http://www.sublimetext.com}
+		\item[PSPad]\url{http://www.pspad.com/cz}
+	\end{description}
 \end{frame}
 
 
