Promazány volné řádky, změna názvu slajdu

--- a/Lecture1/Lecture1.tex
+++ b/Lecture1/Lecture1.tex
@@ -12,6 +12,7 @@
 	\end{example}
 \end{frame}
 
+
 {
 	\usebackgroundtemplate
 	{
@@ -28,11 +29,8 @@
 	\frametitle{Co je \hologo{TeX}}
 	\begin{itemize}
 		\item \hologo{TeX} je program pro počítačovou sazbu (\emph{computer typesetting system}).
-
 		\item \hologo{TeX} vyslovujeme jako \enquote{tech}. Tři písmena v názvu jsou řecká \enquote{tau-epsilon-chí}. Odvozeno od řeckého \texttau\textepsilon\textchi\textnu\texteta{} [techné], \enquote{umění}, \enquote{dovednost}.
-
 		\item První verze \hologo{TeX}u pochází roku 1978, aktuální 3.14159265 z~března 2014.
-
 		\item Zatímco \hologo{LaTeX} je formát dokumentu, \emph{značkovací jazyk}, \hologo{TeX} je \emph{kompilátor}, který překládá zdrojové kódy zapsané v \hologo{LaTeX}u do cílového jazyka, například Pdf.
 	\end{itemize}
 \end{frame}
@@ -171,7 +169,7 @@
 
 
 \begin{frame}
-	\frametitle{Proč se učit \hologo{LaTeX} -- známé workflow}
+	\frametitle{Proč se učit \hologo{LaTeX} -- známé postupy a nástroje}
 	\begin{center}
 		\emph{Nástroje a postupy používané pro sazbu dokumentů pomocí \hologo{LaTeX}u (\hologo{TeX}u) jsou shodné s~nástroji a postupy používanými pro vývoj software.}
 	\end{center}
