Doplněny slajdy k procesu kompilace

--- a/Lecture1/Lecture1.tex
+++ b/Lecture1/Lecture1.tex
@@ -309,12 +309,16 @@ with no extra parameters or packages     included.
 \subsection{Výstupní formáty a kompilátory}
 \begin{frame}
 	\frametitle{Výstupní formáty a kompilátory}
+	\centering
+	\resizebox{\textwidth}{!}{\input{Lecture1/Figures/OutputFormatsAndCompilers.tikz}}
 \end{frame}
 
 
 \subsection{Proces kompilace}
 \begin{frame}
 	\frametitle{Proces kompilace}
+	\centering
+	\input{Lecture1/Figures/CompilationProcess.tikz}
 \end{frame}
 
 
