Doplněna knihovna a další nastavení TikZ

--- a/AllLectures.tex
+++ b/AllLectures.tex
@@ -15,6 +15,11 @@
 \usepackage{url}
 \usepackage[official]{eurosym}
 
+\usetikzlibrary{calc}
+\tikzset{>=stealth}
+\tikzset{x=1mm}
+\tikzset{y=1mm}
+
 \hologoLogoSetup{plainTeX}{variant=runtogether}
 \newcommand{\Beamer}{\textsc{\mbox{Beamer}}}
 \newcommand{\biblatex}{\mbox{biblatex}}
