--- a/Lecture2/Lecture2.tex
+++ b/Lecture2/Lecture2.tex
@@ -6,8 +6,21 @@
 
 
 \subsection{Příkazy}
-\begin{frame}
+\begin{frame}[fragile]
 	\frametitle{Příkazy}
+		\begin{itemize}
+			\item řídí celou sazbu dokumentu,
+			\item slangově se nazývají také jako \emph{makra},
+			\item rozlišujeme dva typy příkazů:
+				\begin{itemize}
+					\item \emph{řídící slova} libovolně dlouhou sekvencí písmen anglické abecedy -- 
+					\item \emph{řídící znaky} jediným nepísmeným znakem -- 
+				\end{itemize}
+			
+
+
+			\item začínají vždy zpětným lomítkem |\| a pokračují
+		\end{itemize}
 \end{frame}
 
 
@@ -91,7 +104,7 @@
 
 \begin{frame}[fragile]
 	\frametitle{Znaky aneb nelze pomlčet o pomlčkách}
-	V typografii exsitují tři druhy pomlček:
+	V typografii existují tři druhy pomlček:
 	\begin{description}
 		\item[spojovník] -- krátká, silná pomlčka, používaná pro dělení slov, zvratné \enquote{-li} a složená slova
 		\item[pomlčka] -- pomlčka ve větách a
