Vložení balíku fancyvrb

--- a/AllLectures.tex
+++ b/AllLectures.tex
@@ -6,7 +6,7 @@
 \usepackage{notomath}
 \usepackage[euler]{textgreek}
 \usepackage{fvextra}
-\usepackage{fancyvrb-ex}
+\usepackage{fancyvrb}
 \usepackage{tcolorbox}
 \usepackage{bbding}
 \usepackage{hologo}
