--- a/Lecture2/Lecture2.tex
+++ b/Lecture2/Lecture2.tex
@@ -183,7 +183,7 @@ Odstavec pokračuje dál%A tohle je už komentář
 
 \begin{frame}[fragile]
 	\frametitle{Seznam s nadpisy}
-	\BVerbatimInput{Samples/DescriptionToInclude.tex}
+	\BVerbatimInput[commandchars=+`']{Samples/DescriptionToInclude.tex}
 	\SamplePdfBox{\includegraphics{Samples/Description-crop.pdf}}
 \end{frame}
 
