--- a/Samples/DescriptionToInclude.tex
+++ b/Samples/DescriptionToInclude.tex
@@ -1,7 +1,7 @@
 Nějaký text před odrážkami s nadpisy.
 \begin{description}
-   \item[Alpha] -- první řádek v seznamu.
-   \item[Bravo] -- druhý řádek je delší, aby bylo
+   \item[Alpha] -+relax- první řádek v seznamu.
+   \item[Bravo] -+relax- druhý řádek je delší, aby bylo
      patrné zalamování textu.
-   \item[Charlie] -- poslední položka v seznamu.
+   \item[Charlie] -+relax- poslední položka v seznamu.
 \end{description}
