--- a/Samples/Description.tex
+++ b/Samples/Description.tex
@@ -1,5 +1,14 @@
 \documentclass[10pt, a4paper]{article}
 \usepackage{LaTeXSamples}
 \begin{document}
-\parbox{0.5\textwidth}{\input{DescriptionToInclude.tex}}
+\parbox{0.5\textwidth}
+{
+Nějaký text před odrážkami s nadpisy.
+\begin{description}
+   \item[Alpha] -- první řádek v seznamu.
+   \item[Bravo] -- druhý řádek je delší, aby bylo
+     patrné zalamování textu.
+   \item[Charlie] -- poslední položka v seznamu.
+\end{description}
+}
 \end{document}
