Revert "Vložení balíku fancyvrb"
This reverts commit 06fa6a97264e6c21dffbfa59cf2b9bec7d5508b7.

--- a/Samples/Description.tex
+++ b/Samples/Description.tex
@@ -1,14 +1,5 @@
 \documentclass[10pt, a4paper]{article}
 \usepackage{LaTeXSamples}
 \begin{document}
-\parbox{0.5\textwidth}
-{
-Nějaký text před odrážkami s nadpisy.
-\begin{description}
-   \item[Alpha] -- první řádek v seznamu.
-   \item[Bravo] -- druhý řádek je delší, aby bylo
-     patrné zalamování textu.
-   \item[Charlie] -- poslední položka v seznamu.
-\end{description}
-}
+\parbox{0.5\textwidth}{\input{DescriptionToInclude.tex}}
 \end{document}
