--- a/AllLectures.tex
+++ b/AllLectures.tex
@@ -6,7 +6,7 @@
 \usepackage{notomath}
 \usepackage[euler]{textgreek}
 \usepackage{fvextra}
-\usepackage{fancyvrb}
+\usepackage{fancyvrb-ex}
 \usepackage{tcolorbox}
 \usepackage{bbding}
 \usepackage{hologo}
