--- a/Lecture3/Lecture3.tex
+++ b/Lecture3/Lecture3.tex
@@ -340,7 +340,7 @@ y = 1 + & \left(\frac{1}{x}+\frac{1}{x^2}+\cdots \right.\\
 		\end{column}
 	\end{columns}
 	\begin{remark}
-		Výpustky lze vuužít i mimo zápis matic, nejčastěji asi |\cdots|, například |$$1 + 2 + \cdots + (n-1) + n$$|, $$1 + 2 + \cdots + (n-1) + n$$
+		Výpustky lze využít i mimo zápis matic, nejčastěji asi |\cdots|, například |$$1 + 2 + \cdots + (n-1) + n$$|, $$1 + 2 + \cdots + (n-1) + n$$
 	\end{remark}
 \end{frame}
 
