Doplnění TikZ knihovny shapes.symbols

--- a/AllLectures.tex
+++ b/AllLectures.tex
@@ -16,6 +16,7 @@
 \usepackage[official]{eurosym}
 
 \usetikzlibrary{calc}
+\usetikzlibrary{shapes.symbols}
 \tikzset{>=stealth}
 \tikzset{x=1mm}
 \tikzset{y=1mm}
