--- a/Lecture1/Lecture1.tex
+++ b/Lecture1/Lecture1.tex
@@ -333,7 +333,7 @@ with no extra parameters or packages     included.
 		\item[TeXnicCenter] -- \url{https://www.texniccenter.org/}\par{}(v současné době již zastaralé)
 	\end{description}
 	\ParagraphCaption{Programátorské editory}\par
-	Obecně lze použít jakýkoliv programátorský editor - záleží­ na uživatelově vkusu a zvyku\ldots
+	Obecně lze použít jakýkoliv programátorský editor - záleží na uživatelově vkusu a zvyku\ldots
 	\begin{description}
 		\item[Sublime Text] -- \url{http://www.sublimetext.com}
 		\item[PSPad]\url{http://www.pspad.com/cz}
@@ -383,7 +383,7 @@ with no extra parameters or packages     included.
 	\end{BVerbatim}
 	\par
 	 Dále mohou být vloženy aktuálně demonstrované balíky maker.\par
-	 Překlad probíhá pomnocí \hologo{pdfLaTeX}u.
+	 Překlad probíhá pomocí \hologo{pdfLaTeX}u.
 \end{frame}
 
 \endinput
