--- a/Samples/FlushLeftToInclude.tex
+++ b/Samples/FlushLeftToInclude.tex
@@ -1,3 +1,5 @@
 \begin{flushleft}
-Sazba na praporek je taková sazba, kdy na konci řádků se slova nedělí. Slovo, které se do řádku již nevejde, se přelije na další řádek. Sazba tak vypadá rozevlátě jako prapor.
+Sazba na praporek je taková sazba, kdy na konci řádků se slova
+nedělí. Slovo, které se do řádku již nevejde, se přelije
+na další řádek. Sazba tak vypadá rozevlátě jako prapor.
 \end{flushleft}
