--- a/Lecture2/Lecture2.tex
+++ b/Lecture2/Lecture2.tex
@@ -146,6 +146,31 @@
 \end{frame}
 
 
+\begin{frame}
+	\frametitle{Sazba na levý praporek}
+	\BVerbatimInput{Samples/FlushLeftToInclude.tex}
+	\bigskip
+	\SamplePdfBox{\includegraphics{Samples/FlushLeft-crop.pdf}}
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Sazba na pravý praporek}
+	\BVerbatimInput{Samples/FlushRightToInclude.tex}
+	\bigskip
+	\SamplePdfBox{\includegraphics{Samples/FlushRight-crop.pdf}}
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Sazba na střed}
+	\centering
+	\BVerbatimInput{Samples/CenteredTextToInclude.tex}
+	\bigskip
+	\SamplePdfBox{\includegraphics{Samples/CenteredText-crop.pdf}}
+\end{frame}
+
+
 \subsection{Komentáře}
 \begin{frame}[fragile]
 	\frametitle{Komentáře}
