Doplněny soubory s logolinkem MŠMT a licencí CC-BY-SA. Tyto soubory zahrnuty do prezentace.

--- a/AllLectures.tex
+++ b/AllLectures.tex
@@ -82,17 +82,23 @@
 \newcommand{\ThanksAttentionPage}{\begin{frame}[standout]Děkuji za pozornost\end{frame}}
 
 \author[Jiří Dvorský]{doc.\ Mgr.\ Jiří Dvorský, Ph.D.}
-\institute[VŠB -- TUO]{Katedra informatiky\\ Fakulta elektrotechniky a informatiky\\ VŠB -- TU Ostrava}
+\institute[VŠB -- TUO]{Katedra informatiky\\{}Fakulta elektrotechniky a informatiky\\{}VŠB -- TU Ostrava\\\smallskip\\\includegraphics[height=3ex]{Figures/by-sa.pdf}}
 \title{Sazba technických dokumentů}
 \date[]{Prezentace ke dni \today}
 %\titlegraphic{\mbox{\hspace{-0.2in}\includegraphics[height=15mm]{Figures/MSMT_EU_Logolink.jpeg}}\vspace*{0.2in}}
-\titlegraphic{\mbox{\hspace{-0.2in}\includegraphics[height=20mm]{Figures/460-FEI-CZ.pdf}}\vspace*{0.2in}}
+\titlegraphic{\mbox{\hspace{-0.2in}\includegraphics[height=15mm]{Figures/460-FEI-CZ.pdf}}}
 
 
 \begin{document}
 
 \begin{frame}
 	\titlepage
+\end{frame}
+
+\begin{frame}
+	\begin{center}
+		\includegraphics[width=\textwidth]{Figures/Logolink_OP_VVV_hor_barva_cz.jpg}
+	\end{center}
 \end{frame}
 
 \begin{frame}
