Odstran2n9 slajdu s logem EU.

--- a/AllLectures.tex
+++ b/AllLectures.tex
@@ -95,11 +95,11 @@
 	\titlepage
 \end{frame}
 
-\begin{frame}
-	\begin{center}
-		\includegraphics[width=\textwidth]{Figures/Logolink_OP_VVV_hor_barva_cz.jpg}
-	\end{center}
-\end{frame}
+%\begin{frame}
+%	\begin{center}
+%		\includegraphics[width=\textwidth]{Figures/Logolink_OP_VVV_hor_barva_cz.jpg}
+%	\end{center}
+%\end{frame}
 
 \begin{frame}
 	\frametitle{Aktuální verze prezentací}
