Doplněna ukázka komentáře. Sjednocena sazba příkladů na styl LaTeXSamples.sty.

--- a/Lecture2/Lecture2.tex
+++ b/Lecture2/Lecture2.tex
@@ -5,6 +5,24 @@
 \end{frame}
 
 
+\subsection{Třídy dokumentů}
+\begin{frame}
+	\frametitle{Třídy dokumentů}
+\end{frame}
+
+
+\subsection{Externí balíky}
+\begin{frame}
+	\frametitle{Externí balíky}
+\end{frame}
+
+
+\subsubsection{Podpora češtiny}
+\begin{frame}
+	\frametitle{Podpora češtiny}
+\end{frame}
+
+
 \subsection{Příkazy}
 \begin{frame}[fragile]
 	\frametitle{Příkazy}
@@ -177,13 +195,12 @@
 	\begin{itemize}
 		\item Komentáře ve zdrojovém kódu dokumentu zapisujeme pomocí znaku |%|.
 		\item \hologo{LaTeX} ignoruje vše od znaku |%| do konce řádku.
-			\begin{Verbatim}
-Text je běžný text odstavce.
-% Tohle je komentář
-Odstavec pokračuje dál%A tohle je už komentář
-			\end{Verbatim}
 		\item Víceřádkové komentáře standardně neexistují, lze ale použít prostředí |comment| z balíku maker |verbatim|.
 	\end{itemize}
+	\medskip
+	\BVerbatimInput{Samples/CommentSampleToInclude.tex}
+	\medskip
+	\SamplePdfBox{\includegraphics[width=\textwidth]{Samples/CommentSample-crop.pdf}}
 \end{frame}
 
 
@@ -459,21 +476,9 @@ Vážení čtenáři dostává se Vám do rukou...
 \end{frame}
 
 
-\subsection{Třídy dokumentů}
-\begin{frame}
-	\frametitle{Třídy dokumentů}
-\end{frame}
-
-
-\subsection{Externí balíky}
+\subsection{Další externí balíky}
 \begin{frame}
 	\frametitle{Externí balíky}
-\end{frame}
-
-
-\subsubsection{Podpora češtiny}
-\begin{frame}
-	\frametitle{Podpora češtiny}
 \end{frame}
 
 
