--- a/Samples/FootnoteSample.tex
+++ b/Samples/FootnoteSample.tex
@@ -1,11 +1,6 @@
 \documentclass[10pt]{article}
-\usepackage{cmap}
-\usepackage[czech]{babel}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage{lmodern}
+\usepackage{LaTeXSamples}
 \usepackage[a4paper, top=20mm, bottom=255mm, left=20mm, right=130mm, nohead, nofoot, nomarginpar]{geometry}
-\pagestyle{empty}
 \begin{document}
 \input{FootnoteSampleToInclude.tex}
 \end{document}
