--- a/Lecture2/Lecture2.tex
+++ b/Lecture2/Lecture2.tex
@@ -2,24 +2,28 @@
 \subsection{Struktura zdrojového kódu v \LaTeX{}u}
 \begin{frame}
 	\frametitle{Struktura zdrojového kódu v \LaTeX{}u}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Třídy dokumentů}
 \begin{frame}
 	\frametitle{Třídy dokumentů}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Externí balíky}
 \begin{frame}
 	\frametitle{Externí balíky}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Podpora češtiny}
 \begin{frame}
 	\frametitle{Podpora češtiny}
+	\UnderConstruction
 \end{frame}
 
 
@@ -155,12 +159,14 @@
 \subsection{Skupiny a prostředí}
 \begin{frame}
 	\frametitle{Skupiny a prostředí}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Odstavce a odřádkování}
 \begin{frame}
 	\frametitle{Odstavce a odřádkování}
+	\UnderConstruction
 \end{frame}
 
 
@@ -453,6 +459,7 @@ Vážení čtenáři dostává se Vám do rukou...
 \subsection{Křížové odkazy}
 \begin{frame}
 	\frametitle{Křížové odkazy}
+	\UnderConstruction
 \end{frame}
 
 
@@ -479,37 +486,43 @@ Vážení čtenáři dostává se Vám do rukou...
 \subsection{Další externí balíky}
 \begin{frame}
 	\frametitle{Externí balíky}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Hypertextové odkazy}
 \begin{frame}
 	\frametitle{Hypertextové odkazy}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Uvozovky}
 \begin{frame}
 	\frametitle{Uvozovky}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Užitečné balíky maker}
 \begin{frame}
 	\frametitle{Užitečné balíky maker}
-	enumitem -- změna vzhledu seznamů
+%	enumitem -- změna vzhledu seznamů
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Časté chyby}
 \begin{frame}
 	\frametitle{Časté chyby}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Správa velkých projektů}
 \begin{frame}
 	\frametitle{Správa velkých projektů}
+	\UnderConstruction
 \end{frame}
 
 \endinput
