--- a/Lecture3/Lecture3.tex
+++ b/Lecture3/Lecture3.tex
@@ -348,6 +348,7 @@ y = 1 + & \left(\frac{1}{x}+\frac{1}{x^2}+\cdots \right.\\
 \subsection{Zlomky a binomické koeficienty}
 \begin{frame}
 	\frametitle{Zlomky a binomické koeficienty}
+	\UnderConstruction
 \end{frame}
 
 
@@ -402,12 +403,14 @@ y = 1 + & \left(\frac{1}{x}+\frac{1}{x^2}+\cdots \right.\\
 \subsection{Integrály, sumy a limity}
 \begin{frame}
 	\frametitle{Integrály, sumy a limity}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Matematické fonty}
 \begin{frame}
 	\frametitle{Matematické fonty}
+	\UnderConstruction
 \end{frame}
 
 
