--- a/Lecture4/Lecture4.tex
+++ b/Lecture4/Lecture4.tex
@@ -2,84 +2,98 @@
 \subsection{Prostředí tabular}
 \begin{frame}
 	\frametitle{Prostředí tabular}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Definice sloupců}
 \begin{frame}
 	\frametitle{Definice sloupců}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Vstup dat}
 \begin{frame}
 	\frametitle{Vstup dat}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Ohraničení tabulek}
 \begin{frame}
 	\frametitle{Ohraničení tabulek}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Obecná pravidla}
 \begin{frame}
 	\frametitle{Obecná pravidla}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Nástroje standardního \LaTeX{}u}
 \begin{frame}
 	\frametitle{Nástroje standardního \LaTeX{}u}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Balík booktabs}
 \begin{frame}
 	\frametitle{Balík booktabs}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Prostředí table}
 \begin{frame}
 	\frametitle{Prostředí table}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Popisky, návěští a odkazy}
 \begin{frame}
 	\frametitle{Popisky, návěští a odkazy}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Umístění tabulek}
 \begin{frame}
 	\frametitle{Umístění tabulek}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Otáčení tabulek}
 \begin{frame}
 	\frametitle{Otáčení tabulek}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Vícesloupcové a víceřádkové oblasti tabulek}
 \begin{frame}
 	\frametitle{Vícesloupcové a víceřádkové oblasti tabulek}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Tabulky a barvy -- barvy buněk, řádků a sloupců, ohraničení}
 \begin{frame}
 	\frametitle{Tabulky a barvy -- barvy buněk, řádků a sloupců, ohraničení}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Vícestránkové tabulky}
 \begin{frame}
 	\frametitle{Vícestránkové tabulky}
+	\UnderConstruction
 \end{frame}
 
 \endinput
