--- a/Lecture6/Bibliography.tex
+++ b/Lecture6/Bibliography.tex
@@ -1,6 +1,7 @@
 \subsection{Bibliografie}
 \begin{frame}
 	\frametitle{Bibliografie}
+	\UnderConstruction
 \end{frame}
 
 
@@ -9,34 +10,40 @@
 	\frametitle{Základní přístup}
 	% jednak vůbec ukázat použití makra \cite, vazba mezi cite a bibitem
 	% ručně vytvořené prostředí thebibliography
+	\UnderConstruction
 \end{frame}
 
 
-\subsubsection{\biblatex}
+\subsubsection{\hologo{BibLaTeX}}
 \begin{frame}
 	\frametitle{\biblatex}
+	\UnderConstruction
 \end{frame}
 
 
 \begin{frame}
 	\frametitle{Bibliografické soubory}
+	\UnderConstruction
 \end{frame}
 
 
 \begin{frame}
 	\frametitle{Sazba seznamu literatury}
 	% třídění seznamu, sazba jen vybraných položek, více seznamů literatury atd.
+	\UnderConstruction
 \end{frame}
 
 
 \begin{frame}
 	\frametitle{Citační styly}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{\hologo{BibTeX}}
 \begin{frame}
 	\frametitle{\hologo{BibTeX}}
+	\UnderConstruction
 \end{frame}
 
 
