--- a/Lecture6/Index.tex
+++ b/Lecture6/Index.tex
@@ -1,28 +1,33 @@
 \subsection{Sazba rejstříku}
 \begin{frame}
 	\frametitle{Sazba rejstříku}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Položky a podpoložky rejstříku}
 \begin{frame}
 	\frametitle{Položky a podpoložky rejstříku}
+	\UnderConstruction
 \end{frame}
 
 
 \subsubsection{Třídící software}
 \begin{frame}
 	\frametitle{Třídící software}
+	\UnderConstruction
 \end{frame}
 
 
 \begin{frame}
 	\frametitle{makeindex}
+	\UnderConstruction
 \end{frame}
 
 
 \begin{frame}
 	\frametitle{xindy}
+	\UnderConstruction
 \end{frame}
 
 \endinput
