--- a/Lecture7/Lecture7.tex
+++ b/Lecture7/Lecture7.tex
@@ -2,54 +2,63 @@
 \subsection{Úvod}
 \begin{frame}
 	\frametitle{Úvod}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Titulní stránka}
 \begin{frame}
 	\frametitle{Titulní stránka}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Obsah prezentace}
 \begin{frame}
 	\frametitle{Obsah prezentace}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Témata a barvy}
 \begin{frame}
 	\frametitle{Témata a barvy}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Zvýrazňování důležitých částí textu}
 \begin{frame}
 	\frametitle{Zvýrazňování důležitých částí textu}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Sloupce}
 \begin{frame}
 	\frametitle{Sloupce}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Sazba zdrojových kódů}
 \begin{frame}
 	\frametitle{Sazba zdrojových kódů}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Zlomy stránek}
 \begin{frame}
 	\frametitle{Zlomy stránek}
+	\UnderConstruction
 \end{frame}
 
 
 \subsection{Písma}
 \begin{frame}
 	\frametitle{Písma}
+	\UnderConstruction
 \end{frame}
 
 \endinput
