--- a/Lecture1/Lecture1.tex
+++ b/Lecture1/Lecture1.tex
@@ -357,6 +357,16 @@ with no extra parameters or packages     included.
 \end{frame}
 
 
+\subsection{Studijní literatura}
+\begin{refsection}
+	\nocite{Satrapa2023}
+	\begin{frame}[t, allowframebreaks]
+		\frametitle{Povinná literatura}
+		\printbibliography[heading=none]
+	\end{frame}
+\end{refsection}
+
+
 \begin{frame}
 	\frametitle{Ukázky sazby -- úmluva}
 	\begin{itemize}
