--- a/Lecture2/Lecture2.tex
+++ b/Lecture2/Lecture2.tex
@@ -114,7 +114,7 @@
 				\end{center}
 		\end{itemize}
 		\medskip
-		Kompletní přehled symbolů \hologo{LaTeX}u -- \url{http://www.ctan.org/tex-archive/info/symbols/comprehensive/symbols-a4.pdf}
+		Kompletní přehled symbolů \hologo{LaTeX}u lze nalézt v \cite{Pakin2017}.
 \end{frame}
 
 
