--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -27,3 +27,97 @@
   url = {https://ctan.org/pkg/siunitx},
 }
 
+@book{Kopka2004,
+  author = {Helmut Kopka and Patrick W. Daly},
+  title = {LATEX},
+  subtitle = {podrobný průvodce},
+  publisher = {Computer Press},
+  address = {Brno},
+  year = {2004},
+  edition = {Vyd. 1.},
+  isbn = {80-722-6973-9},
+}
+
+@online{Oetiker2018,
+  author = {Tobias Oetiker and Hubert Partl and Irene Hyna and Elisabeth Schlegl},
+  journal = {The CTAN archive},
+  title = {The Not So Short Introduction to LATEX 2e},
+  address = {Heidelberg},
+  year = {2018},
+  urldate = {2020-02-08},
+  url = {https://www.ctan.org/pkg/lshort-english},
+}
+
+@online{Oetiker2011,
+  author = {Tobias Oetiker and Hubert Partl and Irene Hyna and Elisabeth Schlegl and Michal Mádr and Pavel Stříž},
+  journal = {The CTAN archive},
+  title = {Ne úplně nejkratší úvod do formátu LATEX 2e},
+  address = {Heidelberg},
+  year = {2011},
+  urldate = {2017-12-28},
+  url = {https://www.ctan.org/pkg/lshort-czech},
+}
+
+@book{Felici2003,
+  author = {James. Felici},
+  title = {The complete manual of typography},
+  subtitle = {a guide to setting perfect type},
+  publisher = {Peachpit Press},
+  address = {Berkeley, CA},
+  year = {2003},
+  edition = {1st},
+  isbn = {978-0321127303},
+}
+
+@book{Lamport1994,
+  author = {Leslie. Lamport},
+  title = {LATEX},
+  subtitle = {a document preparation system : user's guide and reference manual},
+  publisher = {Addison-Wesley Pub. Co.},
+  address = {Reading, Mass.},
+  year = {1994},
+  edition = {2nd ed.},
+  isbn = {978-0201529838},
+}
+
+@book{Mittelbach2004,
+  author = {Frank. Mittelbach and Michel. Goossens and Johannes. Braams and Chris Rowley},
+  title = {The LaTeX companion},
+  publisher = {Addison-Wesley},
+  address = {Boston},
+  year = {2004},
+  edition = {2nd ed. /},
+  isbn = {978-0201362992},
+}
+
+@book{Kocicka2004,
+  author = {Pavel Kočička and Filip Blažek},
+  title = {Praktická typografie},
+  publisher = {Computer Press},
+  address = {Brno},
+  year = {2004},
+  edition = {Vyd. 2.},
+  isbn = {80-722-6385-4},
+}
+
+@book{Beran2007,
+  author = {Vladimír Beran},
+  title = {Typografický manuál},
+  publisher = {Kafka design},
+  address = {Praha},
+  year = {2007},
+  edition = {V. vydání},
+  isbn = {nemá},
+}
+
+@book{Kopka1999,
+  author = {Helmut. Kopka and Patrick W. Daly},
+  title = {A guide to LATEX},
+  subtitle = {document preparation for beginners and advanced users},
+  publisher = {Addison-Wesley},
+  address = {Reading, Mass.},
+  year = {1999},
+  edition = {3rd ed.},
+  isbn = {02-013-9825-7},
+}
+
