--- a/Lecture1/Lecture1.tex
+++ b/Lecture1/Lecture1.tex
@@ -359,9 +359,9 @@ with no extra parameters or packages     included.
 
 \subsection{Studijní literatura}
 \begin{refsection}
-	\nocite{Satrapa2023}
+	\nocite{Satrapa2023, Kopka2004, Oetiker2011, Oetiker2018, Kopka1999, Lamport1994, Mittelbach2004, Beran2007, Kocicka2004, Felici2003}
 	\begin{frame}[t, allowframebreaks]
-		\frametitle{Povinná literatura}
+		\frametitle{Studijní literatura}
 		\printbibliography[heading=none]
 	\end{frame}
 \end{refsection}
@@ -372,7 +372,7 @@ with no extra parameters or packages     included.
 	\begin{itemize}
 		\item Předchozí ukázka sazby dokumentu i tato prezentace vznikla za použití \hologo{LaTeX}u.
 		\item Je však jasné, že sazba dokumentu na stranu formátu A4 a~sazba prezentace se řídí jinými parametry -- rozměry stránky, použitý font a~jeho velikost, barvy a tak dále.
-		\item Pokud nebude výsledek sazby daného typografického prvku v prezentaci a \enquote{papírovém dokumentu} diametrálně odlišný, bude sazba demonstrována přímo v prezentaci. Ve svém dokumentu však uvidíte sice stejný prvek, ale vysázený pravděpodobně jiným fontem, v jiné barvě a tak dále.
+		\item Pokud nebude výsledek sazby daného typografického prvku v~prezentaci a \enquote{papírovém dokumentu} diametrálně odlišný, bude sazba demonstrována přímo v prezentaci. Ve svém dokumentu však uvidíte sice stejný prvek, ale vysázený pravděpodobně jiným fontem, v jiné barvě a tak dále.
 	\end{itemize}
 \end{frame}
 
