--- a/Lecture2/Lecture2.tex
+++ b/Lecture2/Lecture2.tex
@@ -37,7 +37,7 @@
 		\item rozlišujeme dva typy příkazů:
 			\begin{itemize}
 				\item \emph{řídící slova} -- tvořená libovolně dlouhou sekvencí písmen anglické abecedy, která je ukončena prvním nepísmenovým znakem.\par
-					Pokud je prvním nepísmenovým znakem mezera je řídícím slovem \enquote{sežrána} a zmizí ze vstupu, například:\par
+					Pokud je prvním nepísmenovým znakem mezera, je řídícím slovem \enquote{sežrána} a zmizí ze vstupu, například:\par
 					|\LaTeX{} \LaTeX\ {\LaTeX} logo \LaTeX u|\par \LaTeX{} \LaTeX\ {\LaTeX} logo \LaTeX u
 				\item \emph{řídící znaky} -- tvořené jediným nepísmenovým znakem. Například |\#| je řídící znak, který sází znak \#.
 			\end{itemize}
