Smazání slajdu s výstupními formáty (DVI už nebude zmiňováno), obrázek procesu kompilace převzat od Satrapy.

--- a/Lecture1/Lecture1.tex
+++ b/Lecture1/Lecture1.tex
@@ -341,19 +341,13 @@ with no extra parameters or packages     included.
 \end{frame}
 
 
-\subsection{Výstupní formáty a kompilátory}
-\begin{frame}
-	\frametitle{Výstupní formáty a kompilátory}
-	\centering
-	\resizebox{\textwidth}{!}{\input{Lecture1/Figures/OutputFormatsAndCompilers.tikz}}
-\end{frame}
-
-
 \subsection{Proces kompilace}
 \begin{frame}
 	\frametitle{Proces kompilace}
-	\centering
-	\input{Lecture1/Figures/CompilationProcess.tikz}
+	\begin{center}
+		\includegraphics[width=0.85\textwidth]{Lecture1/Figures/CompilationProcess.pdf}
+	\end{center}
+	{\small{}Převzato z \cite{Satrapa2023}}
 \end{frame}
 
 
