Aktualizována verze TeXu.

--- a/Lecture1/Lecture1.tex
+++ b/Lecture1/Lecture1.tex
@@ -30,7 +30,7 @@
 	\begin{itemize}
 		\item \hologo{TeX} je program pro počítačovou sazbu (\emph{computer typesetting system}).
 		\item \hologo{TeX} vyslovujeme jako \enquote{tech}. Tři písmena v názvu jsou řecká \enquote{tau-epsilon-chí}. Odvozeno od řeckého \texttau\textepsilon\textchi\textnu\texteta{} [techné], \enquote{umění}, \enquote{dovednost}.
-		\item První verze \hologo{TeX}u pochází roku 1978, aktuální 3.14159265 z~března 2014.
+		\item První verze \hologo{TeX}u pochází roku 1978, aktuální 3.141592653 z~ledna 2021.
 		\item Zatímco \hologo{LaTeX} je formát dokumentu, \emph{značkovací jazyk}, \hologo{TeX} je \emph{kompilátor}, který překládá zdrojové kódy zapsané v \hologo{LaTeX}u do cílového jazyka, například Pdf.
 	\end{itemize}
 \end{frame}
@@ -57,7 +57,7 @@
 		\item[\hologo{pdfLaTeX}] -- překladač jazyka \hologo{LaTeX}, postavený nad \hologo{pdfTeX}em
 		\item[další překladače]\mbox{}
 			\begin{itemize}
-				\item \hologo{XeTeX} -- nativní podpora UTF-8, přístup k~systémovým fontům,
+				\item \hologo{XeLaTeX} -- nativní podpora UTF-8, přístup k~systémovým fontům,
 				\item \hologo{LuaTeX} -- integrace skriptovacího jazyka Lua.
 			\end{itemize}
 		\item[další programy]\mbox{}
@@ -163,7 +163,7 @@
 		\item Potřebuji vložit nový obrázek. Jak mám přečíslovat dvacet obrázků?!
 		\item Formátování citací a literatury není konzistentní. Jsou pokaždé jiné!
 		\item Číslování citací a literatury si neodpovídají!
-		\item Editor spadl! \alert{\textbf{Soubor s dokumentem je poškozen! Do pi\ldots!!}} A~zálohu nemám.
+		\item Editor spadl! \alert{\textbf{Soubor s dokumentem je poškozen! Do pr\ldots!!}} A~zálohu nemám.
 	\end{itemize}
 \end{frame}
 
